updates on setups

--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -1,11 +1,13 @@
-@import "~antd/lib/style/themes/default.less";
-@import "~antd/dist/antd.less";
+@import './basics/**';
+@import './pages/**';
 
 body {
     margin: 0;
+    background-color: @berry-10;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-size: 16px;
 }
