--- a/client/src/styles/basics/global.less
+++ b/client/src/styles/basics/global.less
@@ -7,3 +7,8 @@
     @vh: (@px / 1080) * 100;
     @{attr}:~"@{vh}vh";
 }
+
+@berry-10: #F8F1F5;
+@berry-60: #FCDDEC;
+@berry-80: #F178B6;
+@berry-100: #EF5DA8;
