--- a/client/src/styles/pages/base.less
+++ b/client/src/styles/pages/base.less
@@ -5,3 +5,12 @@
     align-items: center;
     justify-content: center;
 }
+
+.app-content {
+    .to-vw(1068);
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
