configured axios interceptors

--- a/client/src/styles/basics/global.less
+++ b/client/src/styles/basics/global.less
@@ -12,3 +12,9 @@
 @berry-60: #FCDDEC;
 @berry-80: #F178B6;
 @berry-100: #EF5DA8;
+
+@base-10: #F0F0F0;
+@base-20: #E6E6E6;
+@base-60: #D8D8D8;
+@base-80: #6C6C6C;
+@base-100: #0E0E2C;
