--- a/client/src/styles/pages/base.less
+++ b/client/src/styles/pages/base.less
@@ -7,9 +7,13 @@
 }
 
 .app-content {
-    .to-vw(1068);
-    height: 100px;
-    display: flex;
+    position: absolute;
+    left: 16.61%;
+    right: 20.83%;
+    top: 7.52%;
+    bottom: -0.54%;
+    .to-vw(1081);
+    .to-vh(1039);
     justify-content: center;
     align-items: center;
     background-color: white;
