updates on home page styles

--- a/client/src/styles/basics/components.less
+++ b/client/src/styles/basics/components.less
@@ -4,7 +4,10 @@
     align-items: center;
     justify-content: space-between;
     .to-vw(20, padding);
-
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: white;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
