--- a/client/src/styles/basics/fonts.less
+++ b/client/src/styles/basics/fonts.less
@@ -1,17 +1,38 @@
 h1 {
-    font-size: 64px;
+    font-size: 56px;
     line-height: normal;
+    font-weight: 600;
+
 }
 
 h2 {
     font-size: 48px;
     line-height: normal;
+    font-weight: 600;
+
 }
 
 h3 {
-    font-size: 40px;
+    font-size: 32px;
+    line-height: normal;
+    font-weight: 600;
+
+
 }
 
 h4 {
-    font-size: 32px;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: normal;
+
+}
+
+
+
+.fz-18 {
+    font-size: 18px;
+}
+
+.fz-16 {
+    font-size: 16px;
 }
