--- a/client/src/styles/pages/profilesettings.less
+++ b/client/src/styles/pages/profilesettings.less
@@ -18,6 +18,8 @@
 
 .logout-btn {
     display: flex;
-    margin-top: 50px;
+    margin-top: 5vh;
     justify-content: center;
+    margin-bottom: 10vh;
 }
+
