--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -3,7 +3,9 @@
 
 body {
     margin: 0;
+    color: @base-100;
     background-color: @berry-10;
+    font-weight: 400;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
