--- a/client/src/styles/pages/base.less
+++ b/client/src/styles/pages/base.less
@@ -23,6 +23,11 @@ body {
 
 .app-content {
     width: 65vw;
-    min-height: 150vh;
+}
+
+.white-container {
     background-color: white;
+    width: 100%;
+    .to-vw(25, padding);
+    box-sizing: border-box;
 }
