--- a/client/src/styles/pages/postdetails.less
+++ b/client/src/styles/pages/postdetails.less
@@ -11,6 +11,13 @@
     margin-top: 20px;
 }
 
+.avatar-activity {
+    margin-left: 3px;
+    margin-top: 8px;
+    justify-content: center;
+    display: flex;
+}
+
 .post-content {
     margin-left: 10px;
     top: 27.48%;
