update on profile page

--- a/client/src/styles/basics/components.less
+++ b/client/src/styles/basics/components.less
@@ -66,3 +66,9 @@
     color: @base-60;
     .to-vh(16, margin-bottom);
 }
+
+.show-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
