updates on profile settings

--- a/client/src/styles/basics/fonts.less
+++ b/client/src/styles/basics/fonts.less
@@ -27,6 +27,11 @@ h4 {
 
 }
 
+h5 {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: normal;
+}
 
 
 .fz-18 {
@@ -39,4 +44,8 @@ h4 {
 
 .fz-14 {
     font-size: 14px;
+}
+
+.bold {
+    font-weight: bold;
 }
