--- a/client/src/styles/basics/components.less
+++ b/client/src/styles/basics/components.less
@@ -14,8 +14,9 @@
 
 .header-nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    width: 35vw;
 }
 
 .input {
