updates on berry actions & ui

--- a/client/src/styles/basics/common.less
+++ b/client/src/styles/basics/common.less
@@ -6,7 +6,10 @@
     display: flex;
     justify-content: center;
 }
-
+.space-between {
+    display: flex;
+    justify-content: space-between;
+}
 .space-around {
     display: flex;
     justify-content: space-around;
