--- a/client/src/styles/basics/margins.less
+++ b/client/src/styles/basics/margins.less
@@ -25,6 +25,10 @@
     .to-vw(40, margin-top);
 }
 
+.mg-t-80 {
+    .to-vw(80, margin-top);
+}
+
 //=================BOTTOM==================
 .mg-b-4 {
     .to-vw(4, margin-bottom);
