--- a/client/src/styles/pages/base.less
+++ b/client/src/styles/pages/base.less
@@ -1,6 +1,6 @@
 .loading {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
