updates on responsive page

--- a/client/src/styles/basics/components.less
+++ b/client/src/styles/basics/components.less
@@ -54,6 +54,7 @@
     .to-vw(12, margin-top);
     position: relative;
     border-bottom: 1px solid @base-10;
+    padding: 1%;
 }
 
 .post-item-lower {
@@ -69,4 +70,14 @@
 .show-ellipsis {
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.post-item-body {
+    height: 10vh;
+    width: 90%;
+}
+
+
+.joberry-logo {
+    height: 2.5vh;
 }
