--- a/client/src/styles/basics/common.less
+++ b/client/src/styles/basics/common.less
@@ -1,3 +1,15 @@
+body {
+    margin: 0;
+    color: @base-100;
+    background-color: @berry-10;
+    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 16px;
+}
 .display-flex {
     display: flex;
 }
