--- a/client/src/styles/basics/components.less
+++ b/client/src/styles/basics/components.less
@@ -73,11 +73,19 @@
 }
 
 .post-item-body {
-    height: 10vh;
-    width: 90%;
+    width: 60vw;
+    height: 12vh;
 }
 
 
 .joberry-logo {
     height: 2.5vh;
+}
+
+.discover-post-item {
+    width: 25vw;
+    .post-item-body {
+        width: 28vw;
+        height: 5vh;
+    }
 }
