updates on discover routes

--- a/client/src/styles/media.less
+++ b/client/src/styles/media.less
@@ -62,7 +62,7 @@
         padding: 4px 15px !important;
     }
     .header-nav {
-        width: 45vw;
+        width: 55vw;
     }
 
     .search-bar {
@@ -145,7 +145,8 @@
     }
 
     .post-item-body {
-        width: 90%;
+        width: 80vw;
+        height: 5vh;
     }
     .ant-btn {
         font-size: 10px !important;
@@ -154,13 +155,11 @@
         display: flex;
         align-items: center;
     }
-    .header-nav {
-        width: 45vw;
-    }
+
     .search-bar {
         height: 3vh ;
         font-size: 10px;
-        width: 15vw !important;
+        width: 10vw !important;
     }
     .ant-input {
         font-size: 10px !important;
@@ -172,6 +171,9 @@
     .ant-avatar-lg {
         width: 7vw;
         height: 7vw;
+    }
+    .header-username {
+        display: none;
     }
 }
 
