updates and fixes

--- a/client/src/styles/basics/colors.less
+++ b/client/src/styles/basics/colors.less
@@ -18,8 +18,20 @@
     color: @base-100;
 }
 
+.color-berry-10 {
+    color: @berry-10;
+}
+
+.color-berry-60 {
+    color: @berry-60;
+}
+
+.color-berry-80 {
+    color: @berry-80;
+}
+
 .color-berry-100 {
-    color:@berry-100;
+    color: @berry-100;
 }
 
 .color-error {
