--- a/client/src/styles/basics/components.less
+++ b/client/src/styles/basics/components.less
@@ -10,6 +10,7 @@
     right: 0;
     background-color: white;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    font-weight: 600;
 }
 
 .header-nav {
