--- a/client/src/styles/basics/components.less
+++ b/client/src/styles/basics/components.less
@@ -11,6 +11,7 @@
     background-color: white;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     font-weight: 600;
+    z-index: 1000;
 }
 
 .header-nav {
@@ -38,7 +39,7 @@
     input {
         background-color: @base-10  !important;
     }
-
+    filter: drop-shadow(0px 1px 1px rgba(0, 0, 0, 0.15));
     border-radius: 235px;
     border-color: @base-10;
 }
@@ -52,7 +53,6 @@
 
 .post-item {
     display: flex;
-    .to-vw(12, margin-top);
     position: relative;
     border-bottom: 1px solid @base-10;
     padding: 1%;
@@ -85,6 +85,7 @@
 
 .discover-post-item {
     width: 25vw;
+
     .post-item-body {
         width: 28vw;
         height: 5vh;
