--- a/client/src/styles/pages/base.less
+++ b/client/src/styles/pages/base.less
@@ -30,4 +30,6 @@ body {
     width: 100%;
     .to-vw(25, padding);
     box-sizing: border-box;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
 }
