--- a/client/src/styles/basics/common.less
+++ b/client/src/styles/basics/common.less
@@ -26,7 +26,10 @@ body {
     display: flex;
     justify-content: space-around;
 }
-
+.space-evenly {
+    display: flex;
+    justify-content: space-evenly;
+}
 .align-center {
     display: flex;
     align-items: center;
