--- a/client/src/styles/pages/base.less
+++ b/client/src/styles/pages/base.less
@@ -5,7 +5,9 @@
     align-items: center;
     justify-content: center;
 }
-
+.small-loading {
+    height: 15vh;
+}
 body {
     overflow: hidden;
 }
@@ -13,10 +15,9 @@ body {
 .app-base {
     display: flex;
     justify-content: center;
-    position: absolute;
     width: 100vw;
     height: 93vh;
-    top: 7vh;
+    margin-top: 7vh;
     overflow: auto;
     padding: 1vw;
 }
@@ -33,3 +34,5 @@ body {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
 }
+
+
